ipc/ipdl/test/ipdl/error/trans_WrongDirection4.ipdl
rpc protocol trans_WrongDirection4 {

child:
    rpc Msg();
    __delete__();

state S1:
    answer Msg goto S1;

start state _:
    send __delete__;
};
